# HoughForest

./: CMakeLists.txt  README.md  config.txt  configure.hpp  data.hpp  evaluation.hpp  feature.hpp  file_list.txt  main.cpp  neg_list.txt  selector.hpp  serialize.hpp  state.hpp  statistic.hpp  tree.hpp
dataset/: anotation.hpp  dataset.hpp
font/: fonts.hpp  simulation.hpp  synthesis.hpp
proto/: configuration.pb.cc  configuration.pb.h  configuration.proto
test/: CMakeLists.txt  fonts.txt  test.txt  test_configure.cpp  test_data.cpp  test_fonts.cpp  test_selector.cpp  test_serialization.cpp  train.txt
utils/: utils.hpp
